# s3grep

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release-plz.yml
src/: interceptors.rs  lib.rs  main.rs
tests/: integration_s3.rs
